Changes in version 1.1.65
=========================

- Amend date parser module to accomodate usage in Juris-M, and
  provide parse() method for backward compatibility.

- Make parsed date values numeric

    https://github.com/Juris-M/zotero/issues/2

- Fix date parsing bug exposed when multiple date locales are
  loaded
  
    https://github.com/Juris-M/zotero/issues/9

=========================
Changes in version 1.1.64
=========================

- Fix bug in xmljson.js that caused incorrect formatting of
  names in some styles when rendered with xmljson.js parser:

    https://github.com/zotero/citeproc-node/issues/26

- Fix bug in text-case="title" that prevented tag-enclosed
  text from uppercasing properly.

    https://bitbucket.org/fbennett/citeproc-js/issues/187/title-case-formatter-does-not-title-case

- Fix sort bug affecting some JavaScript engines.

    https://twitter.com/fgbjr/status/662844111834079232

=========================
Changes in version 1.1.63
=========================

- Extend uppercase-subtitles option to cover container-title
  as well. New code is extensible to series titles as well, if
  that is desired.

    https://github.com/Juris-M/propachi-upper/issues/2

=========================
Changes in version 1.1.62
=========================

- Fix bug in cite-group-delimiter:

    https://github.com/citation-style-language/styles/pull/1742/files#r43429282

=========================
Changes in version 1.1.61
=========================

- Fix Extra-field hack parse of creators. Add (possibly multiple)
  names if original input had not name of same category. Addresses
  bug report:

    https://github.com/zotero/zotero/issues/846#issuecomment-146794378

=========================
Changes in version 1.1.60
=========================

- Avoid erroneous disambiguation when non-"issued" date variables
  are the only difference between citations (but continue to ignore
  "accessed").
