@@ -16,6 +16,14 @@ Changes in version 1.1.65
   
     https://github.com/Juris-M/zotero/issues/9
 
+- Recognize underscore workaround as a date delimiter
+
+    https://github.com/Juris-M/zotero/issues/6
+
+- Return incompletely parsed dates as literal
+
+    https://github.com/Juris-M/zotero/issues/13
+
 =========================
 Changes in version 1.1.64
 =========================
